--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,8 @@
 asgiref==3.2.10
+astroid==2.5.6
 certifi==2020.6.20
 chardet==3.0.4
+colorama==0.4.4
 Django==3.0.7
 django-cors-headers==3.4.0
 django-crispy-forms==1.9.1
@@ -9,11 +11,17 @@ django-taggit==1.3.0
 djangorestframework==3.12.4
 gunicorn==20.0.4
 idna==2.10
+isort==5.9.1
+lazy-object-proxy==1.6.0
 Markdown==3.3.4
+mccabe==0.6.1
 Pillow==8.2.0
+pylint==2.8.3
 python-decouple==3.3
 pytz==2020.1
 requests==2.24.0
 six==1.15.0
 sqlparse==0.3.1
+toml==0.10.2
 urllib3==1.25.10
+wrapt==1.12.1
